hphp/test/zend/good/Zend/tests/indirect_method_call_002.php.expectf
string(3) "foo"
string(7) "testing"
string(3) "foo"

Fatal error: Call to undefined method foo::www() in %s/indirect_method_call_002.php on line 17
